--- a/AryanITC.Domain/Resources/ViewModels/AboutUs/FilterAboutUsViewModel.fa-IR.resx
+++ b/AryanITC.Domain/Resources/ViewModels/AboutUs/FilterAboutUsViewModel.fa-IR.resx
@@ -117,19 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Active" xml:space="preserve">
+  <data name="AboutUsDescription" xml:space="preserve">
+    <value>شرح درباره ما</value>
+  </data>
+  <data name="AboutUsImage" xml:space="preserve">
+    <value>تصویر درباره ما</value>
+  </data>
+  <data name="AboutUsLink" xml:space="preserve">
+    <value>لینک درباره ما</value>
+  </data>
+  <data name="AboutUsState" xml:space="preserve">
+    <value>وضعیت درباره ما</value>
+  </data>
+  <data name="AboutUsTitle" xml:space="preserve">
+    <value>عنوان درباره ما</value>
+  </data>
+  <data name="Image" xml:space="preserve">
+    <value>تصویر</value>
+  </data>
+  <data name="IsActive" xml:space="preserve">
     <value>فعال</value>
   </data>
-  <data name="IsDeleted" xml:space="preserve">
+  <data name="IsDelete" xml:space="preserve">
     <value>حذف شده</value>
   </data>
   <data name="MaxLength" xml:space="preserve">
-    <value>{0} نمی تواند بیشتر از {1} کاراکتر داشته باشد</value>
+    <value>{0} نمی تواند بیشتر از {1} کاراکتر باشد</value>
   </data>
   <data name="Required" xml:space="preserve">
     <value>لطفاً {0} را وارد نمایید !</value>
   </data>
-  <data name="RoleTitle" xml:space="preserve">
-    <value>عنوان نقش</value>
+  <data name="Url" xml:space="preserve">
+    <value>فرمت لینک وارد شده اشتباه است</value>
   </data>
 </root>
