--- a/AryanITC.Domain/Resources/Entities/Account/User.fa-IR.resx
+++ b/AryanITC.Domain/Resources/Entities/Account/User.fa-IR.resx
@@ -141,8 +141,8 @@
   <data name="MaxLength" xml:space="preserve">
     <value>{0} نمی تواند بیشتر از {1} کاراکتر داشته باشد</value>
   </data>
-  <data name="Mobile" xml:space="preserve">
-    <value>موبایل</value>
+  <data name="Mobile1" xml:space="preserve">
+    <value>شماره موبایل</value>
   </data>
   <data name="OtpCode" xml:space="preserve">
     <value>کد یکبار مصرف</value>
