--- a/AryanITC.Domain/Resources/ViewModels/Service/FilterServiceViewModel.fa-IR.resx
+++ b/AryanITC.Domain/Resources/ViewModels/Service/FilterServiceViewModel.fa-IR.resx
@@ -117,13 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Mobile" xml:space="preserve">
-    <value>موبایل</value>
+  <data name="FontAwesome" xml:space="preserve">
+    <value>نام کلاس فونت/عکس</value>
   </data>
-  <data name="Photo" xml:space="preserve">
-    <value>تصویر</value>
+  <data name="FontAwesomeColor" xml:space="preserve">
+    <value>کد رنگ</value>
   </data>
-  <data name="UsersState" xml:space="preserve">
-    <value>وضعیت کاربران</value>
+  <data name="IsActive" xml:space="preserve">
+    <value>فعال</value>
+  </data>
+  <data name="IsDelete" xml:space="preserve">
+    <value>حذف شده</value>
+  </data>
+  <data name="MaxLength" xml:space="preserve">
+    <value>{0} نمی تواند بیشتر از {1} کاراکتر باشد</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>لطفاً {0} را وارد نمایید !</value>
+  </data>
+  <data name="ServiceDescription" xml:space="preserve">
+    <value>توضیحات سرویس</value>
+  </data>
+  <data name="ServiceImage" xml:space="preserve">
+    <value>عکس سرویس</value>
+  </data>
+  <data name="ServiceState" xml:space="preserve">
+    <value>وضعیت سرویس</value>
+  </data>
+  <data name="ServiceTitle" xml:space="preserve">
+    <value>نام سرویس</value>
   </data>
 </root>
